# AI-Builders-Bootcamp-7

./: README.md
session-1/: README.md  example_2-job_dashboard 2.py  example_2-job_dashboard.py
session-1/data/: job_data.csv
session-1/live-coding-example/: 1-scrape_job_board.ipynb  pyproject.toml
session-2/: README.md  example_1-paper_summarizer.ipynb  example_2-lead_scoring.ipynb
session-3/: README.md  example_1-rag_with_llamaindex.ipynb  example_2-unstructured_survey_analysis.ipynb
session-3/data/: survey.csv
session-4/: README.md  example_1-youtube_agent.ipynb  example_2-notion_mcp_agent.ipynb  example_3-profile_rewriter_loop.ipynb  pyproject.toml
session-4/profiles/: profile-0.txt  profile-1.txt  profile-2.txt  profile-3.txt  profile-4.txt  profile-5.txt  profile-6.txt  profile-7.txt  profile-8.txt  profile-9.txt
session-5/example-1/: README.md  linkedin_post_writer.ipynb  pyproject.toml
session-5/example-1/data/: LI_posts.csv  train-data.jsonl  valid-data.jsonl
session-5/example-2/: 1-generate_synthetic_queries.ipynb  2-create_training_data.ipynb  3-fine_tune_embeddings.ipynb  4-use_finetuned_embeddings.ipynb  README.md  pyproject.toml
session-6/: README.md
