[project]
name = "session-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "python-dotenv>=1.2.1",
    "textstat>=0.7.10",
    "youtube-transcript-api>=1.2.3",
]
